--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,13 +7,12 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-    <permission android:name="android.permission.ACCESS_COARSE_LOCATION"></permission>
-    <permission android:name="android.permission.ACCESS_FINE_LOCATION"></permission>
-
+    <permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo2"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -29,8 +28,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".Signup" />
-        <activity android:name=".Dashboard"
-            android:screenOrientation="landscape"></activity>
+        <activity
+            android:name=".Dashboard"
+            android:screenOrientation="landscape" />
+        <activity android:name=".ScoreBoard"></activity>
     </application>
 
 </manifest>
